--- a/Web.config
+++ b/Web.config
@@ -4,6 +4,10 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -12,6 +16,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms cookieless="UseCookies" loginUrl="~/Account/Login" slidingExpiration="true" />
+	  </authentication>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
     <pages>
@@ -66,4 +73,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008,40000,40008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=4.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="Users" connectionString="Data Source=Eldar;   Initial Catalog=Users;   Integrated Security=True;   MultipleActiveResultSets=True;   TrustServerCertificate=True;   App=EntityFramework" providerName="System.Data.SqlClient" /><add name="UsersEntities" connectionString="metadata=res://*/Models.UserModel.csdl|res://*/Models.UserModel.ssdl|res://*/Models.UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Eldar;initial catalog=Users;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UsersEntities1" connectionString="metadata=res://*/Models.Userdata.csdl|res://*/Models.Userdata.ssdl|res://*/Models.Userdata.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Eldar;initial catalog=Users;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UsersEntities2" connectionString="metadata=res://*/Models.Userdata.csdl|res://*/Models.Userdata.ssdl|res://*/Models.Userdata.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Eldar;initial catalog=Users;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UsersEntities3" connectionString="metadata=res://*/Models.UserModel.csdl|res://*/Models.UserModel.ssdl|res://*/Models.UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Eldar;initial catalog=Users;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="UsersEntities4" connectionString="metadata=res://*/Models.UsersModel.csdl|res://*/Models.UsersModel.ssdl|res://*/Models.UsersModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Eldar;initial catalog=Users;integrated security=True;multipleactiveresultsets=True;trustservercertificate=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
