--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Abp" version="9.1.3" targetFramework="net48" />
+  <package id="Abp.Zero.Common" version="9.1.3" targetFramework="net48" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="AutoMapper" version="10.0.0" targetFramework="net48" />
   <package id="bootstrap" version="5.3.3" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net48" />
+  <package id="Castle.Core.AsyncInterceptor" version="2.1.0" targetFramework="net48" />
+  <package id="Castle.LoggingFacility" version="6.0.0" targetFramework="net48" />
+  <package id="Castle.Windsor" version="6.0.0" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net48" />
+  <package id="JetBrains.Annotations" version="2023.3.0" targetFramework="net48" />
   <package id="jQuery" version="3.7.1" targetFramework="net48" />
   <package id="jQuery.UI.Combined" version="1.13.2" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.20.0" targetFramework="net48" />
@@ -13,33 +21,56 @@
   <package id="Microsoft.AspNet.Razor" version="3.3.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.3.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net48" />
-  <package id="Microsoft.EntityFrameworkCore" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.32" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.32" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.32" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="3.1.32" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.32" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging" version="3.1.32" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.32" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="3.1.32" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="3.1.32" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="8.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="7.5.1" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="7.5.1" targetFramework="net48" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="4.0.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Nito.AsyncEx.Context" version="5.1.2" targetFramework="net48" />
+  <package id="Nito.AsyncEx.Coordination" version="5.1.2" targetFramework="net48" />
+  <package id="Nito.AsyncEx.Tasks" version="5.1.2" targetFramework="net48" />
+  <package id="Nito.Collections.Deque" version="1.1.1" targetFramework="net48" />
+  <package id="Nito.Disposables" version="2.2.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
-  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
-  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
+  <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net48" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Linq.Dynamic.Core" version="1.3.8" targetFramework="net48" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Security.Claims" version="4.3.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.1" targetFramework="net48" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
+  <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.XPath" version="4.3.0" targetFramework="net48" />
+  <package id="System.Xml.XPath.XmlDocument" version="4.3.0" targetFramework="net48" />
+  <package id="TimeZoneConverter" version="6.1.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
